| Summary: | ASTERISK-26253: sdp_srtp: libsrtp now a required dependency, shouldn't be | ||||
| Reporter: | Ben Merrills (skrusty) | Labels: | |||
| Date Opened: | 2016-08-01 15:08:45 | Date Closed: | 2016-08-11 06:21:45 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Core/General | ||
| Versions: | 14.0.0-beta1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | ubuntu/14.04tls | Attachments: | |||
| Description: | [CC] sdp_srtp.c -> sdp_srtp.o
sdp_srtp.c:37:72: fatal error: srtp/srtp.h: No such file or directory #include <srtp/srtp.h> /* for SRTP_MAX_KEY_LEN, etc */ srtp isn't installed, not selected in build config, but being requested during make, throwing the error above. In menuselect the option is 'XXX'd out. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-01 15:08:45.988-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||||